--- a/src/app/clientes/cliente-principal/cliente-principal.component.html
+++ b/src/app/clientes/cliente-principal/cliente-principal.component.html
@@ -1,5 +1,7 @@
 <p>Componente cliente principal funcionando</p>
-
+<app-lista [listaClientes]="listaClientes"></app-lista>
+<app-nuevo [listaClientes]="listaClientes"></app-nuevo>
+<!--
 <h3>Lista de Clientes</h3>
 <hr>
 <ul *ngFor="let cliente of listaClientes">
@@ -7,15 +9,4 @@
        {{ cliente.nombre }} - {{ cliente.edad }}
     </li> 
 </ul>
-
-<h3>Agregar cliente</h3>
-<hr>
-<div style="width: 50%;"> 
-    <form (ngSubmit)="agregar()">
-        <input type="text" placeholder="Nombre" name="nombre" [(ngModel)] = "nuevoCliente.nombre">
-        <input type="number" placeholder="Edad" name="edad"  [(ngModel)] = "nuevoCliente.edad">
-        <button type="submit">
-            Agregar
-        </button>
-    </form>
-</div>
+-->
